add variables for axes lims for hists and strips

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -1308,6 +1308,7 @@
     "\n",
     "hist_plots = False\n",
     "strip_plots = True\n",
+    "axes_lims = (0, 500)\n",
     "\n",
     "# for each number of gaps, plot the distribution of gap lengths\n",
     "print(\"###\\n###\\n### ALL TOGETHER DIRECT ###\\n###\\n###\")\n",
@@ -1321,7 +1322,7 @@
     "            xlabel=\"Gap Length (nm)\",\n",
     "            ylabel=\"Count\",\n",
     "            title=f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
-    "            xlim=(0, 700),\n",
+    "            xlim=axes_lims,\n",
     "        )\n",
     "    if strip_plots:\n",
     "        plot_stripviolinplot_list(\n",
@@ -1329,6 +1330,7 @@
     "            ylabel=\"Gap Length (nm)\",\n",
     "            xlabel=\"Number of Gaps\",\n",
     "            title=f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "            ylim=axes_lims,\n",
     "        )\n",
     "\n",
     "    if num_gaps > 1:\n",
@@ -1341,7 +1343,7 @@
     "                xlabel=\"Summed Gap Length (nm)\",\n",
     "                ylabel=\"Count\",\n",
     "                title=f\"Summed Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
-    "                xlim=(0, 700),\n",
+    "                xlim=axes_lims,\n",
     "            )\n",
     "\n",
     "        if strip_plots:\n",
@@ -1350,6 +1352,7 @@
     "                ylabel=\"Summed Gap Length (nm)\",\n",
     "                xlabel=\"Number of Gaps\",\n",
     "                title=f\"Summed Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
+    "                ylim=axes_lims,\n",
     "            )\n",
     "\n",
     "# get the height defect gap lengths\n",
@@ -1369,7 +1372,7 @@
     "            xlabel=\"Gap Length (nm)\",\n",
     "            ylabel=\"Count\",\n",
     "            title=f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
-    "            xlim=(0, 700),\n",
+    "            xlim=axes_lims,\n",
     "        )\n",
     "\n",
     "    if strip_plots:\n",
@@ -1378,6 +1381,7 @@
     "            ylabel=\"Gap Length (nm)\",\n",
     "            xlabel=\"Number of Gaps\",\n",
     "            title=f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "            ylim=axes_lims,\n",
     "        )\n",
     "\n",
     "    if num_gaps > 1:\n",
@@ -1389,7 +1393,7 @@
     "                xlabel=\"Summed Gap Length (nm)\",\n",
     "                ylabel=\"Count\",\n",
     "                title=f\"Summed Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
-    "                xlim=(0, 700),\n",
+    "                xlim=axes_lims,\n",
     "            )\n",
     "        if strip_plots:\n",
     "            plot_stripviolinplot_list(\n",
@@ -1397,6 +1401,7 @@
     "                ylabel=\"Summed Gap Length (nm)\",\n",
     "                xlabel=\"Number of Gaps\",\n",
     "                title=f\"Summed Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)}, num grains: {len(gap_lengths)}\",\n",
+    "                ylim=axes_lims,\n",
     "            )\n",
     "\n",
     "# ================== curvature and height defect gap lengths per dose\n",
@@ -1419,7 +1424,7 @@
     "                xlabel=\"Gap Length (nm)\",\n",
     "                ylabel=\"Count\",\n",
     "                title=f\"Height Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
-    "                xlim=(0, 700),\n",
+    "                xlim=axes_lims,\n",
     "            )\n",
     "        if strip_plots:\n",
     "            plot_stripviolinplot_list(\n",
@@ -1427,6 +1432,7 @@
     "                ylabel=\"Gap Length (nm)\",\n",
     "                xlabel=\"Number of Gaps\",\n",
     "                title=f\"Height Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "                ylim=axes_lims,\n",
     "            )\n",
     "\n",
     "    # curvature defect gap lengths\n",
@@ -1443,7 +1449,7 @@
     "                xlabel=\"Gap Length (nm)\",\n",
     "                ylabel=\"Count\",\n",
     "                title=f\"Curvature Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
-    "                xlim=(0, 700),\n",
+    "                xlim=axes_lims,\n",
     "            )\n",
     "        if strip_plots:\n",
     "            plot_stripviolinplot_list(\n",
@@ -1451,6 +1457,7 @@
     "                ylabel=\"Gap Length (nm)\",\n",
     "                xlabel=\"Number of Gaps\",\n",
     "                title=f\"Curvature Defect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "                ylim=axes_lims,\n",
     "            )\n",
     "\n",
     "print(\"###\\n###\\n### ALL TOGETHER INDIRECT ###\\n###\\n###\")\n",
@@ -1472,7 +1479,7 @@
     "            xlabel=\"Indirect Gap Length (nm)\",\n",
     "            ylabel=\"Count\",\n",
     "            title=f\"Curvature Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
-    "            xlim=(0, 700),\n",
+    "            xlim=axes_lims,\n",
     "        )\n",
     "    if strip_plots:\n",
     "        plot_stripviolinplot_list(\n",
@@ -1480,6 +1487,7 @@
     "            ylabel=\"Indirect Gap Length (nm)\",\n",
     "            xlabel=\"Number of Gaps\",\n",
     "            title=f\"Curvature Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "            ylim=axes_lims,\n",
     "        )\n",
     "\n",
     "# height\n",
@@ -1499,7 +1507,7 @@
     "            xlabel=\"Indirect Gap Length (nm)\",\n",
     "            ylabel=\"Count\",\n",
     "            title=f\"Height Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
-    "            xlim=(0, 700),\n",
+    "            xlim=axes_lims,\n",
     "        )\n",
     "    if strip_plots:\n",
     "        plot_stripviolinplot_list(\n",
@@ -1507,6 +1515,7 @@
     "            ylabel=\"Indirect Gap Length (nm)\",\n",
     "            xlabel=\"Number of Gaps\",\n",
     "            title=f\"Height Defect Indirect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\",\n",
+    "            ylim=axes_lims,\n",
     "        )\n",
     "\n",
     "# ================== per dose\n",
@@ -1528,7 +1537,7 @@
     "                xlabel=\"Indirect Gap Length (nm)\",\n",
     "                ylabel=\"Count\",\n",
     "                title=f\"Height Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
-    "                xlim=(0, 700),\n",
+    "                xlim=axes_lims,\n",
     "            )\n",
     "        if strip_plots:\n",
     "            plot_stripviolinplot_list(\n",
@@ -1536,6 +1545,7 @@
     "                ylabel=\"Indirect Gap Length (nm)\",\n",
     "                xlabel=\"Number of Gaps\",\n",
     "                title=f\"Height Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "                ylim=axes_lims,\n",
     "            )\n",
     "    # curvature defect indirect gap lengths\n",
     "    curvature_defect_indirect_gap_lengths_dose = get_defect_gap_lengths(\n",
@@ -1551,7 +1561,7 @@
     "                xlabel=\"Indirect Gap Length (nm)\",\n",
     "                ylabel=\"Count\",\n",
     "                title=f\"Curvature Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
-    "                xlim=(0, 700),\n",
+    "                xlim=axes_lims,\n",
     "            )\n",
     "        if strip_plots:\n",
     "            plot_stripviolinplot_list(\n",
@@ -1559,6 +1569,7 @@
     "                ylabel=\"Indirect Gap Length (nm)\",\n",
     "                xlabel=\"Number of Gaps\",\n",
     "                title=f\"Curvature Defect Indirect Gap Lengths (Dose: {dose}, Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\",\n",
+    "                ylim=axes_lims,\n",
     "            )"
    ]
   },
@@ -1594,7 +1605,7 @@
     "            data=gap_lengths_i,\n",
     "            ylabel=\"Gap Length (nm)\",\n",
     "            title=f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}, item: {i} / {len(sorted_gap_lengths[0]) - 1}) N: {len(gap_lengths_i)}, num grains: {len(gap_lengths)}\",\n",
-    "            ylim=(0,500)\n",
+    "            ylim=axes_lims,\n",
     "        )\n",
     "\n",
     "print(f\"###\\n###\\n### HEIGHT DEFECT GAP LENGTHS ###\\n###\\n###\")\n",
@@ -1622,7 +1633,7 @@
     "            data=gap_lengths_i,\n",
     "            ylabel=\"Gap Length (nm)\",\n",
     "            title=f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}, item: {i} / {len(sorted_gap_lengths[0]) - 1}) N: {len(gap_lengths_i)}, num grains: {len(gap_lengths)}\",\n",
-    "            ylim=(0,500)\n",
+    "            ylim=axes_lims,\n",
     "        )"
    ]
   }
