find curvature defects by simple threshold radpernm

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -456,6 +456,39 @@
     "        num_cols=5\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e58a4247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# detect defects\n",
+    "\n",
+    "defect_curvature_threshold_radpernm = 0.3\n",
+    "\n",
+    "grains_dicts_curvature_defects = {}\n",
+    "for sample_type, grains_dict_sample in grains_dicts_curvature.items():\n",
+    "    grains_dicts_curvature_defects[sample_type] = {}\n",
+    "    for grain_index, grain_data in grains_dict_sample.items():\n",
+    "        grain_image = grain_data[\"image\"]\n",
+    "        grain_mask = grain_data[\"predicted_mask\"]\n",
+    "        intersection_labels = grain_data[\"intersection_labels\"]\n",
+    "        p_to_nm = grain_data[\"p_to_nm\"]\n",
+    "        resampled_path_px = grain_data[\"resampled_path_px\"]\n",
+    "        path_curvatures = grain_data[\"curvature\"]\n",
+    "\n",
+    "        # detect defects based on curvature\n",
+    "        defect_mask = np.abs(path_curvatures) > defect_curvature_threshold_radpernm\n",
+    "        defect_indices = np.where(defect_mask)[0]\n",
+    "\n",
+    "        # save the original grain data\n",
+    "        grains_dicts_curvature_defects[sample_type][grain_index] = grain_data\n",
+    "        # add the defect mask and indices to the grain data\n",
+    "        grains_dicts_curvature_defects[sample_type][grain_index][\"defect_mask\"] = defect_mask\n",
+    "        grains_dicts_curvature_defects[sample_type][grain_index][\"defect_indices\"] = defect_indices"
+   ]
   }
  ],
  "metadata": {
