Fix zeros not prepended to distances_to_previous_points_nm for defect processing

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -26,6 +26,7 @@
     "from topostats.tracing.splining import resample_points_regular_interval\n",
     "from topostats.measure.feret import get_feret_from_mask\n",
     "from topostats.measure.curvature import discrete_angle_difference_per_nm_linear\n",
+    "from topostats.damage.damage import get_defects_and_gaps_from_bool_array, Defect, DefectGap\n",
     "\n",
     "colormap = Colormap()\n",
     "CMAP = colormap.get_cmap()\n",
@@ -228,7 +229,15 @@
     "    for sample_type, grain_dict in grains_dicts.items():\n",
     "        print(f\"Plotting grains for sample type [{sample_type}]\")\n",
     "        plot_all_grains_dictionary(\n",
-    "            grain_dict, vmin=VMIN, vmax=VMAX, cmap=CMAP, show_plot=True, num_grains_to_limit_to=10, wspace=0, hspace=0, num_cols=5\n",
+    "            grain_dict,\n",
+    "            vmin=VMIN,\n",
+    "            vmax=VMAX,\n",
+    "            cmap=CMAP,\n",
+    "            show_plot=True,\n",
+    "            num_grains_to_limit_to=10,\n",
+    "            wspace=0,\n",
+    "            hspace=0,\n",
+    "            num_cols=5,\n",
     "        )"
    ]
   },
@@ -329,13 +338,11 @@
     "\n",
     "        diffs = resampled_path_px[1:, :] - resampled_path_px[:-1, :]\n",
     "        resampled_distances_px = np.linalg.norm(diffs, axis=1)\n",
+    "        # prepend a zero to the distances to match the length of the resampled path\n",
+    "        resampled_distances_px = np.insert(resampled_distances_px, 0, 0)\n",
     "        resampled_distances_nm = resampled_distances_px * p_to_nm\n",
     "        cumulative_resampled_distances_px = np.cumsum(resampled_distances_px)\n",
-    "        # prepend a zero to the cumulative distances to match the length of the resampled path\n",
-    "        cumulative_resampled_distances_px = np.insert(cumulative_resampled_distances_px, 0, 0)\n",
     "        cumulative_resampled_distances_nm = np.cumsum(resampled_distances_nm)\n",
-    "        # prepend a zero to the cumulative distances to match the length of the resampled path\n",
-    "        cumulative_resampled_distances_nm = np.insert(cumulative_resampled_distances_nm, 0, 0)\n",
     "\n",
     "        if len(resampled_path_px) <= 2:\n",
     "            print(\n",
@@ -453,13 +460,13 @@
     "        show_plot=True,\n",
     "        figsize_multiplier=5,\n",
     "        num_grains_to_limit_to=10,\n",
-    "        num_cols=5\n",
+    "        num_cols=5,\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e58a4247",
    "metadata": {},
    "outputs": [],
@@ -477,17 +484,16 @@
     "        intersection_labels = grain_data[\"intersection_labels\"]\n",
     "        p_to_nm = grain_data[\"p_to_nm\"]\n",
     "        resampled_path_px = grain_data[\"resampled_path_px\"]\n",
+    "        resampled_distances_nm = grain_data[\"resampled_distances_nm\"]\n",
     "        path_curvatures = grain_data[\"curvature\"]\n",
     "\n",
     "        # detect defects based on curvature\n",
     "        defect_mask = np.abs(path_curvatures) > defect_curvature_threshold_radpernm\n",
-    "        defect_indices = np.where(defect_mask)[0]\n",
-    "\n",
-    "        # save the original grain data\n",
-    "        grains_dicts_curvature_defects[sample_type][grain_index] = grain_data\n",
-    "        # add the defect mask and indices to the grain data\n",
-    "        grains_dicts_curvature_defects[sample_type][grain_index][\"defect_mask\"] = defect_mask\n",
-    "        grains_dicts_curvature_defects[sample_type][grain_index][\"defect_indices\"] = defect_indices"
+    "        ordered_defect_list = get_defects_and_gaps_from_bool_array(\n",
+    "            defects_bool=defect_mask,\n",
+    "            distance_to_previous_points_nm=grain_data[\"resampled_distances_nm\"],\n",
+    "            circular=False,\n",
+    "        )"
    ]
   }
  ],
