plot stripplots of defect positions for each sample

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -493,7 +493,38 @@
     "            defects_bool=defect_mask,\n",
     "            distance_to_previous_points_nm=grain_data[\"resampled_distances_nm\"],\n",
     "            circular=False,\n",
-    "        )"
+    "        )\n",
+    "\n",
+    "        # save the original grain data\n",
+    "        grains_dicts_curvature_defects[sample_type][grain_index] = grain_data\n",
+    "        # add the defects to the grain data\n",
+    "        grains_dicts_curvature_defects[sample_type][grain_index][\"ordered_defect_list\"] = ordered_defect_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e99a937c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the positions of the defects for each sample type\n",
+    "for sample_type, grain_dict in grains_dicts_curvature_defects.items():\n",
+    "    # plot a strip plot of the defect positions\n",
+    "    defect_positions_nm = []\n",
+    "    for grain_index, grain_data in grain_dict.items():\n",
+    "        for defect_or_gap in grain_data[\"ordered_defect_list\"].defect_gap_list:\n",
+    "            if isinstance(defect_or_gap, Defect):\n",
+    "                defect_positions_nm.append(defect_or_gap.position_along_trace_nm)\n",
+    "    print(f\"Number of defects for sample type [{sample_type}]: {len(defect_positions_nm)}\")\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    sns.stripplot(defect_positions_nm, jitter=0.1, color=\"grey\")\n",
+    "    sns.violinplot(defect_positions_nm, color=\"lightblue\", inner=None, linewidth=0.5, alpha=0.5)\n",
+    "    plt.title(f\"Defect positions for sample type [{sample_type}]\")\n",
+    "    plt.xlabel(\"Position along trace (nm)\")\n",
+    "    plt.ylabel(\"Defect position\")\n",
+    "    plt.savefig(save_dirs[sample_type] / f\"defect_positions_{sample_type}.png\", dpi=200)\n",
+    "    plt.show()"
    ]
   }
  ],
