add plotting of defects (to gallery) and defect positions along trace (stripplots)

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -98,6 +98,7 @@
     "    vmax: float = VMAX,\n",
     "    cmap: mpl.cm = CMAP,\n",
     "    plot_paths: list[str] = None,\n",
+    "    plot_defects: bool = False,\n",
     "    plot_colour_paths: list[tuple[str, str]] = None,\n",
     "    plot_colour_norm_bounds: tuple[float, float] = (-0.3, 0.3),\n",
     "    plot_lineplots: list[tuple[str, str, str, str, str, tuple[float, float] | None]] = None,\n",
@@ -180,6 +181,29 @@
     "        mask_ax.set_title(\"Mask\")\n",
     "        mask_ax.axis(\"off\")\n",
     "        fig.add_subplot(mask_ax)\n",
+    "\n",
+    "        if plot_defects:\n",
+    "            if \"ordered_defect_list\" in grain_data:\n",
+    "                ordered_defect_list = grain_data[\"ordered_defect_list\"].defect_gap_list\n",
+    "                for defect_or_gap in ordered_defect_list:\n",
+    "                    if isinstance(defect_or_gap, Defect):\n",
+    "                        defect = defect_or_gap\n",
+    "                        defect_start = defect.start_index\n",
+    "                        defect_end = defect.end_index\n",
+    "                        defect_start_point = grain_data[\"resampled_path_px\"][defect_start]\n",
+    "                        defect_end_point = grain_data[\"resampled_path_px\"][defect_end]\n",
+    "                        mask_ax.scatter(\n",
+    "                            defect_start_point[1],\n",
+    "                            defect_start_point[0],\n",
+    "                            color=\"blue\",\n",
+    "                            s=100,\n",
+    "                        )\n",
+    "                        mask_ax.scatter(\n",
+    "                            defect_end_point[1],\n",
+    "                            defect_end_point[0],\n",
+    "                            color=\"red\",\n",
+    "                            s=100,\n",
+    "                        )\n",
     "\n",
     "        if plot_lineplots is not None:\n",
     "            for lineplot_index, lineplot_x_y_and_titles in enumerate(plot_lineplots):\n",
@@ -504,27 +528,96 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "71a59afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot all grains with defects\n",
+    "for sample_type, grain_dict in grains_dicts_curvature_defects.items():\n",
+    "    print(f\"Plotting grains with defects for sample type [{sample_type}]\")\n",
+    "    plot_all_grains_dictionary(\n",
+    "        grain_dict=grain_dict,\n",
+    "        vmin=VMIN,\n",
+    "        vmax=VMAX,\n",
+    "        cmap=CMAP,\n",
+    "        plot_paths=[\"resampled_path_px\"],\n",
+    "        plot_defects=True,\n",
+    "        plot_colour_paths=[(\"resampled_path_px\", \"curvature\")],\n",
+    "        plot_lineplots=[\n",
+    "            [\n",
+    "                \"cumulative_resampled_distances_nm\",\n",
+    "                \"curvature\",\n",
+    "                \"distance (nm)\",\n",
+    "                \"curvature (rad/nm)\",\n",
+    "                \"Curvature\",\n",
+    "                (-0.5, 0.5),\n",
+    "            ]\n",
+    "        ],\n",
+    "        save_path=save_dirs[sample_type] / f\"grains_with_defects_{sample_type}.png\",\n",
+    "        show_plot=True,\n",
+    "        figsize_multiplier=5,\n",
+    "        num_grains_to_limit_to=10,\n",
+    "        num_cols=5,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e99a937c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# plot the positions of the defects for each sample type\n",
+    "# collect all defect positions first\n",
+    "all_defect_positions = {}\n",
     "for sample_type, grain_dict in grains_dicts_curvature_defects.items():\n",
-    "    # plot a strip plot of the defect positions\n",
     "    defect_positions_nm = []\n",
     "    for grain_index, grain_data in grain_dict.items():\n",
     "        for defect_or_gap in grain_data[\"ordered_defect_list\"].defect_gap_list:\n",
     "            if isinstance(defect_or_gap, Defect):\n",
     "                defect_positions_nm.append(defect_or_gap.position_along_trace_nm)\n",
+    "    all_defect_positions[sample_type] = defect_positions_nm\n",
     "    print(f\"Number of defects for sample type [{sample_type}]: {len(defect_positions_nm)}\")\n",
-    "    plt.figure(figsize=(10, 5))\n",
-    "    sns.stripplot(defect_positions_nm, jitter=0.1, color=\"grey\")\n",
-    "    sns.violinplot(defect_positions_nm, color=\"lightblue\", inner=None, linewidth=0.5, alpha=0.5)\n",
-    "    plt.title(f\"Defect positions for sample type [{sample_type}]\")\n",
-    "    plt.xlabel(\"Position along trace (nm)\")\n",
-    "    plt.ylabel(\"Defect position\")\n",
-    "    plt.savefig(save_dirs[sample_type] / f\"defect_positions_{sample_type}.png\", dpi=200)\n",
-    "    plt.show()"
+    "\n",
+    "# create a single figure with subplots for all sample types\n",
+    "fig, axes = plt.subplots(1, len(sample_types), figsize=(15, 5), sharey=True)\n",
+    "\n",
+    "for i, sample_type in enumerate(sample_types):\n",
+    "    defect_positions_nm = all_defect_positions[sample_type]\n",
+    "\n",
+    "    # create stripplot and violinplot on the same axis\n",
+    "    sns.stripplot(\n",
+    "        x=[sample_type] * len(defect_positions_nm), y=defect_positions_nm, jitter=0.1, color=\"grey\", ax=axes[i]\n",
+    "    )\n",
+    "    sns.violinplot(\n",
+    "        x=[sample_type] * len(defect_positions_nm),\n",
+    "        y=defect_positions_nm,\n",
+    "        color=\"lightblue\",\n",
+    "        inner=None,\n",
+    "        linewidth=0.5,\n",
+    "        alpha=0.5,\n",
+    "        ax=axes[i],\n",
+    "    )\n",
+    "\n",
+    "    axes[i].set_title(f\"{sample_type}\\n({len(defect_positions_nm)} defects)\")\n",
+    "    axes[i].set_xlabel(\"Sample Type\")\n",
+    "    if i == 0:\n",
+    "        axes[i].set_ylabel(\"Position along trace (nm)\")\n",
+    "    else:\n",
+    "        axes[i].set_ylabel(\"\")\n",
+    "\n",
+    "    # remove x-axis tick labels to clean up appearance\n",
+    "    axes[i].set_xticklabels([])\n",
+    "\n",
+    "plt.suptitle(\"Defect Positions by Sample Type\", fontsize=16)\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# save the combined plot\n",
+    "combined_save_path = BASE_SAVE_DIR / f\"combined_defect_positions_{TODAY_DATE}.png\"\n",
+    "combined_save_path.parent.mkdir(exist_ok=True, parents=True)\n",
+    "plt.savefig(combined_save_path, dpi=200, bbox_inches=\"tight\")\n",
+    "plt.show()"
    ]
   }
  ],
