add mean absolute curvature per grain

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -357,6 +357,19 @@
     "    for bad_grain in bad_grains:\n",
     "        print(f\"bad grain {bad_grain[0]} in file {bad_grain[1]}: {bad_grain[2]}\")\n",
     "\n",
+    "    # print numbers per dose\n",
+    "    dose_counts = {}\n",
+    "    for grain_data in grains_dictionary.values():\n",
+    "        dose = grain_data[\"dose\"]\n",
+    "        if dose not in dose_counts:\n",
+    "            dose_counts[dose] = 0\n",
+    "        dose_counts[dose] += 1\n",
+    "\n",
+    "    print(\"=== Dose grain counts ===\")\n",
+    "    print(f\"dose   :   count\")\n",
+    "    for dose, count in dose_counts.items():\n",
+    "        print(f\"{dose:>5}: {count:>5}\")\n",
+    "\n",
     "    return grains_dictionary\n",
     "\n",
     "\n",
@@ -827,10 +840,13 @@
     "        filename = grain_data[\"filename\"]\n",
     "        grain_bad = False\n",
     "        total_num_coinciding_defects = 0\n",
+    "        all_smoothed_curvatures = []\n",
     "        for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
     "            resampled_points_px = molecule_data[\"resampled_points_px\"]\n",
     "            resampled_heights = molecule_data[\"resampled_heights\"]\n",
     "            smoothed_curvatures = molecule_data[\"smoothed_curvatures\"]\n",
+    "            all_smoothed_curvatures = np.concatenate((all_smoothed_curvatures, smoothed_curvatures))\n",
+    "\n",
     "            cumulative_resampled_distances_px = molecule_data[\"cumulative_resampled_distances_px\"]\n",
     "            curvature_defects_bool = molecule_data[\"curvature_defects_bool\"]\n",
     "            # curvature_defects_lengths, curvature_defect_gaps_lengths = calculate_defects_and_gap_lengths(\n",
@@ -917,6 +933,7 @@
     "\n",
     "        num_curvature_defects = grain_data[\"num_curvature_defects\"]\n",
     "        num_height_defects = grain_data[\"num_height_defects\"]\n",
+    "        mean_abs_smoothed_curvature = np.mean(np.abs(all_smoothed_curvatures))\n",
     "\n",
     "        # save the defect stats to a list\n",
     "        defect_stats_list.append(\n",
@@ -932,6 +949,7 @@
     "                \"num_curvature_defects\": num_curvature_defects,\n",
     "                \"num_height_defects\": num_height_defects,\n",
     "                \"num_coinciding_defects\": total_num_coinciding_defects,\n",
+    "                \"mean_abs_smoothed_curvature\": mean_abs_smoothed_curvature,\n",
     "                \"mean_curvature_defect_length\": mean_curvature_defects_length,\n",
     "                \"mean_height_defect_length\": mean_height_defect_length,\n",
     "                \"height_defects_lengths\": height_defects_lengths,\n",
@@ -1635,6 +1653,17 @@
     "            title=f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}, item: {i} / {len(sorted_gap_lengths[0]) - 1}) N: {len(gap_lengths_i)}, num grains: {len(gap_lengths)}\",\n",
     "            ylim=axes_lims,\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72cbc389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summed abs curvature per sample type\n",
+    "sns.stripplot(data=defect_stats_df, x=\"dose\", y=\"mean_abs_smoothed_curvature\", color=\"black\", alpha=0.5)"
    ]
   }
  ],
