add threshold indicators for individual_iqr method

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -182,6 +182,7 @@
     "            # print(f\"getting data from {filename}\")\n",
     "            image = file_data[\"image\"]\n",
     "            ordered_trace_data = file_data[\"ordered_traces\"][\"above\"]\n",
+    "            print(file_data.keys())\n",
     "\n",
     "            for current_grain_index, grain_ordered_trace_data in ordered_trace_data.items():\n",
     "\n",
@@ -531,7 +532,7 @@
     "    values: npt.NDArray[np.float64],\n",
     "    individual_iqr_factor: float,\n",
     "    direction: str,\n",
-    ") -> npt.NDArray[np.bool_]:\n",
+    ") -> tuple[npt.NDArray[np.bool_], float, float]:\n",
     "    \"\"\"Detect defects based on individual IQR factor.\"\"\"\n",
     "\n",
     "    if direction not in [\"above\", \"below\", \"both\"]:\n",
@@ -549,7 +550,7 @@
     "            defects_bool[i] = True\n",
     "        elif direction == \"both\" and (value < lower_threshold or value > upper_threshold):\n",
     "            defects_bool[i] = True\n",
-    "    return defects_bool\n",
+    "    return defects_bool, lower_threshold, upper_threshold\n",
     "\n",
     "\n",
     "def find_curvature_defects_grains_dictionary(\n",
@@ -588,19 +589,26 @@
     "    print(f\"finding curvature defects using method {defect_method}\")\n",
     "    new_grains_dictionary = {}\n",
     "    curvature_thresholds_by_tip: dict[int, tuple[float, float]] = {}\n",
+    "    curvature_thresholds_by_grain_and_molecule: dict[tuple[int, int], tuple[float, float]] = {}\n",
     "    if defect_method == \"individual_iqr\":\n",
     "        # iterate over each grain\n",
     "        for grain_index, grain_data in grains_dictionary.items():\n",
     "            total_curvature_defects_grain = 0\n",
     "            for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
     "                smoothed_curvatures = molecule_data[\"smoothed_curvatures\"]\n",
-    "                curvature_defects_bool = individual_iqr_defect_detection(\n",
+    "                curvature_defects_bool, lower_threshold, upper_threshold = individual_iqr_defect_detection(\n",
     "                    values=smoothed_curvatures, individual_iqr_factor=curvature_individual_iqr_factor, direction=\"both\"\n",
     "                )\n",
     "                curvature_defects_indexes = np.where(curvature_defects_bool)[0]\n",
     "                total_curvature_defects_grain += count_defects_in_binary_array(binary_array=curvature_defects_bool)\n",
     "                molecule_data[\"curvature_defects_bool\"] = curvature_defects_bool\n",
     "                molecule_data[\"curvature_defects_indexes\"] = curvature_defects_indexes\n",
+    "\n",
+    "                # store the thresholds for this grain and molecule\n",
+    "                curvature_thresholds_by_grain_and_molecule[(grain_index, molecule_index)] = (\n",
+    "                    lower_threshold,\n",
+    "                    upper_threshold,\n",
+    "                )\n",
     "\n",
     "            # Add stats to grain data\n",
     "            grain_data[\"num_curvature_defects\"] = total_curvature_defects_grain\n",
@@ -651,7 +659,7 @@
     "    else:\n",
     "        raise ValueError(f\"defect_method {defect_method} not supported\")\n",
     "\n",
-    "    return new_grains_dictionary, curvature_thresholds_by_tip\n",
+    "    return new_grains_dictionary, curvature_thresholds_by_tip, curvature_thresholds_by_grain_and_molecule\n",
     "\n",
     "\n",
     "def find_height_defects_grains_dictionary(\n",
@@ -690,19 +698,26 @@
     "    print(f\"finding height defects using method {defect_method}\")\n",
     "    new_grains_dictionary = {}\n",
     "    height_thresholds_by_tip: dict[int, tuple[float, float]] = {}\n",
+    "    height_thresholds_by_grain_and_molecule: dict[tuple[int, int], tuple[float, float]] = {}\n",
     "    if defect_method == \"individual_iqr\":\n",
     "        # iterate over each grain\n",
     "        for grain_index, grain_data in grains_dictionary.items():\n",
     "            total_height_defects_grain = 0\n",
     "            for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
     "                resampled_heights = molecule_data[\"resampled_heights\"]\n",
-    "                height_defects_bool = individual_iqr_defect_detection(\n",
+    "                height_defects_bool, lower_threshold, upper_threshold = individual_iqr_defect_detection(\n",
     "                    values=resampled_heights, individual_iqr_factor=height_individual_iqr_factor, direction=\"below\"\n",
     "                )\n",
     "                height_defects_indexes = np.where(height_defects_bool)[0]\n",
     "                total_height_defects_grain += count_defects_in_binary_array(binary_array=height_defects_bool)\n",
     "                molecule_data[\"height_defects_bool\"] = height_defects_bool\n",
     "                molecule_data[\"height_defects_indexes\"] = height_defects_indexes\n",
+    "\n",
+    "                # store the thresholds for this grain and molecule\n",
+    "                height_thresholds_by_grain_and_molecule[(grain_index, molecule_index)] = (\n",
+    "                    lower_threshold,\n",
+    "                    upper_threshold,\n",
+    "                )\n",
     "\n",
     "            # Add stats to grain data\n",
     "            grain_data[\"num_height_defects\"] = total_height_defects_grain\n",
@@ -752,7 +767,7 @@
     "    else:\n",
     "        raise ValueError(f\"defect_height_threshold_method {defect_method} not supported\")\n",
     "\n",
-    "    return new_grains_dictionary, height_thresholds_by_tip\n",
+    "    return new_grains_dictionary, height_thresholds_by_tip, height_thresholds_by_grain_and_molecule\n",
     "\n",
     "\n",
     "def find_defects_in_height_and_curvature(\n",
@@ -814,21 +829,25 @@
     "    new_grains_dictionary = {}\n",
     "\n",
     "    # find curvature defects\n",
-    "    grains_dictionary, curvature_thresholds_by_tip = find_curvature_defects_grains_dictionary(\n",
-    "        grains_dictionary=grains_dictionary,\n",
-    "        defect_method=curvature_defect_method,\n",
-    "        curvature_threshold_abs_radpernm=curvature_threshold_abs_radpernm,\n",
-    "        curvature_threshold_iqr_factor=curvature_threshold_iqr_factor,\n",
-    "        curvature_individual_iqr_factor=curvature_individual_iqr_factor,\n",
+    "    grains_dictionary, curvature_thresholds_by_tip, curvature_thresholds_by_grain_and_molecule = (\n",
+    "        find_curvature_defects_grains_dictionary(\n",
+    "            grains_dictionary=grains_dictionary,\n",
+    "            defect_method=curvature_defect_method,\n",
+    "            curvature_threshold_abs_radpernm=curvature_threshold_abs_radpernm,\n",
+    "            curvature_threshold_iqr_factor=curvature_threshold_iqr_factor,\n",
+    "            curvature_individual_iqr_factor=curvature_individual_iqr_factor,\n",
+    "        )\n",
     "    )\n",
     "\n",
     "    # find height defects\n",
-    "    grains_dictionary, height_thresholds_by_tip = find_height_defects_grains_dictionary(\n",
-    "        grains_dictionary=grains_dictionary,\n",
-    "        defect_method=height_defect_method,\n",
-    "        height_threshold_iqr_factor=height_threshold_iqr_factor,\n",
-    "        height_threshold_abs_nm=height_threshold_abs_nm,\n",
-    "        height_individual_iqr_factor=height_individual_iqr_factor,\n",
+    "    grains_dictionary, height_thresholds_by_tip, height_thresholds_by_grain_and_molecule = (\n",
+    "        find_height_defects_grains_dictionary(\n",
+    "            grains_dictionary=grains_dictionary,\n",
+    "            defect_method=height_defect_method,\n",
+    "            height_threshold_iqr_factor=height_threshold_iqr_factor,\n",
+    "            height_threshold_abs_nm=height_threshold_abs_nm,\n",
+    "            height_individual_iqr_factor=height_individual_iqr_factor,\n",
+    "        )\n",
     "    )\n",
     "\n",
     "    # iterate over all grains and molecules\n",
@@ -934,6 +953,7 @@
     "        num_curvature_defects = grain_data[\"num_curvature_defects\"]\n",
     "        num_height_defects = grain_data[\"num_height_defects\"]\n",
     "        mean_abs_smoothed_curvature = np.mean(np.abs(all_smoothed_curvatures))\n",
+    "        std_abs_smoothed_curvature = np.std(np.abs(all_smoothed_curvatures))\n",
     "\n",
     "        # save the defect stats to a list\n",
     "        defect_stats_list.append(\n",
@@ -950,6 +970,7 @@
     "                \"num_height_defects\": num_height_defects,\n",
     "                \"num_coinciding_defects\": total_num_coinciding_defects,\n",
     "                \"mean_abs_smoothed_curvature\": mean_abs_smoothed_curvature,\n",
+    "                \"std_abs_smoothed_curvature\": std_abs_smoothed_curvature,\n",
     "                \"mean_curvature_defect_length\": mean_curvature_defects_length,\n",
     "                \"mean_height_defect_length\": mean_height_defect_length,\n",
     "                \"height_defects_lengths\": height_defects_lengths,\n",
@@ -978,6 +999,13 @@
     "                ax[0, 0].axhline(threshold_above, color=\"red\", linestyle=\"--\", label=\"threshold above\")\n",
     "                ax[0, 0].axhline(threshold_below, color=\"blue\", linestyle=\"--\", label=\"threshold below\")\n",
     "                ax[0, 0].legend()\n",
+    "            if curvature_defect_method == \"individual_iqr\":\n",
+    "                lower_threshold, upper_threshold = curvature_thresholds_by_grain_and_molecule[\n",
+    "                    (grain_index, molecule_index)\n",
+    "                ]\n",
+    "                ax[0, 0].axhline(upper_threshold, color=\"red\", linestyle=\"--\", label=\"threshold above\")\n",
+    "                ax[0, 0].axhline(lower_threshold, color=\"blue\", linestyle=\"--\", label=\"threshold below\")\n",
+    "                ax[0, 0].legend()\n",
     "            ax[0, 0].set_ylim(-0.5, 0.5)\n",
     "            ax[0, 0].set_xlabel(\"Distance (nm)\")\n",
     "            ax[0, 0].set_ylabel(\"Curvature (1/nm)\")\n",
@@ -986,6 +1014,12 @@
     "            if height_defect_method == \"per_tip_median_iqr\":\n",
     "                threshold_height = height_thresholds_by_tip[tip][1]\n",
     "                ax[0, 1].axhline(threshold_height, color=\"red\", linestyle=\"--\", label=\"threshold\")\n",
+    "                ax[0, 1].legend()\n",
+    "            if height_defect_method == \"individual_iqr\":\n",
+    "                lower_threshold, upper_threshold = height_thresholds_by_grain_and_molecule[\n",
+    "                    (grain_index, molecule_index)\n",
+    "                ]\n",
+    "                ax[0, 1].axhline(lower_threshold, color=\"blue\", linestyle=\"--\", label=\"threshold below\")\n",
     "                ax[0, 1].legend()\n",
     "            ax[0, 1].set_ylim(0, 4)\n",
     "            ax[0, 1].set_xlabel(\"Distance (nm)\")\n",
